--- a/Register/login.html
+++ b/Register/login.html
@@ -36,7 +36,7 @@
     			<li class="faq"><a href="#" style="font-size: 13px; height: 40px; width: 49px; ">
     			<span class="fa-stack fa-lg" style="font-size: 1em;">
     			<i class="fa fa-circle fa-stack-2x"></i>
-  				<i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQs
+  				<i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQ
 				</span></a></li>
 				
 
