--- a/Register/login.html
+++ b/Register/login.html
@@ -63,7 +63,7 @@
   </div>
 </div>
 
-<!-- Text input-->
+<!-- Text input of Password-->
       
 <div class="form-group">
   <label class="col-md-2 control-label">Password</label>  
