Reverted Back login.html

--- a/Register/login.html
+++ b/Register/login.html
@@ -63,7 +63,7 @@
   </div>
 </div>
 
-<!-- Text input of Password-->
+<!-- Text input -->
       
 <div class="form-group">
   <label class="col-md-2 control-label">Password</label>  
