--- a/Register/signup.html
+++ b/Register/signup.html
@@ -21,6 +21,10 @@
   	}
   	</style>
 
+      <link href="style2.css" rel="stylesheet">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+
 </head> 
 <body id="body-color" style="background-image: url('formback.png'); background-position: center; background-size: 100%;  background-attachment: fixed;"> 
 <div class="topnav" id="myTopnav">
@@ -59,7 +63,8 @@
 <div  class="form1" >
   
 
-    <form class=" form-horizontal" action="signup.php" method="POST"  id="contact_form" style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; ">
+    <form class=" form-horizontal" action="signup.php" method="POST"  id="contact_form" name="form1"
+    style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; ">
 <fieldset>
 
 <!-- Form Name -->
@@ -71,7 +76,7 @@
   <div class="col-md-9 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input  name="name" placeholder="Enter your Full Name" class="form-control"  type="text">
+  <input  name="name" placeholder="Enter your Full Name" class="form-control"  type="text" required>
     </div>
   </div>
 </div>
@@ -82,7 +87,7 @@
     <div class="col-md-9 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-envelope"></i></span>
-  <input name="email" placeholder="E-Mail Address" class="form-control"  type="text">
+  <input name="email" placeholder="E-Mail Address" class="form-control"  type="email" required>
     </div>
   </div>
 </div>
@@ -92,25 +97,25 @@
   <div class="col-md-9 inputGroupContainer">
   <div class="input-group">
   <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input  name="user" placeholder="Choose your username" class="form-control"  type="text">
+  <input  name="user" placeholder="Choose your username" class="form-control"  type="text" required required>
     </div>
   </div>
 </div>
-
-
 
 
 <!-- Text input-->
       
-<div class="form-group">
+<div class="form-group" >
   <label class="col-md-3 control-label">Password</label>  
     <div class="col-md-9 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-  <input name="pass" placeholder="Create a password" class="form-control" type="password">
+  <input name="pass" placeholder="Create a password" class="form-control" type="password" id="password">
+    <span class="mySpan1" >enter password longer than eight character </span>
     </div>
   </div>
 </div>
+
 
 <!-- Text input-->
       
@@ -119,7 +124,9 @@
     <div class="col-md-9 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-  <input name="cpass" placeholder="Confirm your password" class="form-control" type="password">
+  <input name="cpass" placeholder="Confirm your password" class="form-control" type="password"
+   id="retypePassword">
+    <span class="mySpan2">confirm password</span>
     </div>
   </div>
 </div>
@@ -131,7 +138,7 @@
     <div class="col-md-9 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-education"></i></span>
-  <input name="college" placeholder="Enter your college name" class="form-control"  type="text">
+  <input name="college" placeholder="Enter your college name" class="form-control"  type="text" required>
     </div>
   </div>
 </div>
@@ -143,7 +150,7 @@
     <div class="col-md-9 inputGroupContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-home"></i></span>
-  <input name="city" placeholder="Enter your city" class="form-control"  type="text">
+  <input name="city" placeholder="Enter your city" class="form-control"  type="text" required>
     </div>
   </div>
 </div>
@@ -155,7 +162,7 @@
     <div class="col-md-9 selectContainer">
     <div class="input-group">
         <span class="input-group-addon"><i class="glyphicon glyphicon-list"></i></span>
-    <select name="state" class="form-control selectpicker" >
+    <select name="state" class="form-control selectpicker" required >
       <option value=" " >Please select your state</option>
       <option>Andaman and Nicobar Islands</option>
         <option>Andhra Pradesh</option>
@@ -251,6 +258,78 @@ function myFunction() {
     }
 
 }
+</script>
+
+
+
+<script>
+$(function(){
+//Problem: Hints are shown even when form is valid
+//Solution: Hide and show them at appropriate times
+var $password = $("#password");
+var $retypePassword = $("#retypePassword");
+
+
+//Hide hints
+$password.next().hide();
+$retypePassword.next().hide();
+
+
+
+function isPasswordValid() {
+  return $password.val().length > 8;
+}
+
+function arePasswordsMatching() {
+  return $password.val() === $retypePassword.val();
+}
+
+ 
+function passwordEvent(){
+    //Find out if password is valid  
+    if(isPasswordValid()) {
+      //Hide hint if valid
+      $password.next().hide();
+    } else {
+      //else show hint
+      $password.next().show();
+    }
+};
+
+//When event happens on password input
+$password.keyup(passwordEvent).keyup(confirmPasswordEvent).keyup(enableSubmitEvent);
+
+$password.focusout(function(){
+  if($password.val() === ""){
+    $password.next().hide();
+  }
+});
+
+function confirmPasswordEvent() {
+  //Find out if password and confirmation match
+  if(arePasswordsMatching()) {
+    //Hide hint if match
+    $retypePassword.next().hide();
+  } else {
+    //else show hint 
+    $retypePassword.next().show();
+  }
+};
+
+//When event happens on confirmation input
+$retypePassword.focus(confirmPasswordEvent).keyup(confirmPasswordEvent).keyup(enableSubmitEvent);
+
+function canSubmit() {
+  return isPasswordValid() && arePasswordsMatching() && isemailvalid();
+}
+
+function enableSubmitEvent() {
+  $("#submit").prop("disabled", !canSubmit());
+}
+
+enableSubmitEvent();
+
+});
 </script>
 
 </body> 
