--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				    <div class="carousel-inner">
 
 				      	<div class="item active">
-				        	<img src="img/portal.png" alt="Los Angeles" style="width:100%;min-height: 560px;">
+				        	<img src="img/portal.png" alt="Los Angeles" style="width:100%;">
 				        	<div class="carousel-caption" style="margin-bottom: 70px;">
           						<a href="Register/signup.html"><button class="slidebutton1" style="padding: 3.5px 10px; margin-right: 30px;"><span style="font-size:13px">REGISTER</span></button></a>
           						<button class="slidebutton1" style="padding: 3.5px 25px;"><a href="#">FAQs</a></button>
@@ -120,7 +120,7 @@
 				      	</div>
 
 				      	<div class="item">
-				        	<img src="img/CA1.png" alt="Chicago" style="width:100%; min-height: 560px">
+				        	<img src="img/CA1.png" alt="Chicago" style="width:100%;">
 				        	<div class="carousel-caption" style="margin-bottom: 70px;">
           						<button class="slidebutton1" style="padding: 3.5px 14px; margin-right: 30px;"><a href="#">JOIN US</a></button>
           						<button class="slidebutton1" style="padding: 3.5px 16px;"><a href="#">WHY CA</a></button>
@@ -130,7 +130,7 @@
 				      	</div>
 				    
 				      	<div class="item">
-				        	<img src="img/lookback1.png" alt="New York" style="width:100%; min-height: 560px;">
+				        	<img src="img/lookback1.png" alt="New York" style="width:100%;">
 				        		<div class="carousel-caption" style="margin-bottom: 80px;">
           						<button class="slidebutton1"><a href="#">GALLERY</a></button>
           						
