--- a/Register/signup.html
+++ b/Register/signup.html
@@ -24,7 +24,7 @@
 </head> 
 <body id="body-color" style="background-image: url('formback.png'); background-position: center; background-size: 100%;  background-attachment: fixed;"> 
 <div class="topnav" id="myTopnav">
-	<div class="navbar-header"><a class="navbar-brand" href="#"><img src="img/logo.png" >
+	<div class="navbar-header"><a class="navbar-brand" href="../index.html"><img src="img/logo.png" >
         </a></div>
 
   <span class="cl-effect-1"><a href="#">EVENTS</a></span>
@@ -32,7 +32,7 @@
   <span class="cl-effect-1"><a href="#">TEAM</a></span>
   <span class="cl-effect-1"><a href="#">SPONSORS</a></span>
   <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
-  			<button class="button button3"><a href="#">REGISTER</a></button>
+  			<a style="float:none; display: inline" href="signup.html"><button class="button button3">REGISTER</button></a>
  
     			<li class="faq"><a href="#" style="font-size: 13px; height: 40px; width: 49px; ">
     			<span class="fa-stack fa-lg" style="font-size: 1em;">
