--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
         <a style="float:none; display: inline" href="Register/signup.html"><button class="button button3">REGISTER</button></a>
  
-          <li class="faq" data-toggle="modal" data-target="#myModal"><a href="#" style="font-size: 13px; height: 40px; width: 49px; ">
+          <li class="faq" ><a href="#" style="font-size: 13px; height: 40px; width: 49px; ">
           <span class="fa-stack fa-lg" style="font-size: 1em;">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQs
