--- a/Register/signup.html
+++ b/Register/signup.html
@@ -81,12 +81,19 @@
 <div style="position: relative;" class="title">
       <legend style="text-align: center; font-size: 30px; color: #333">Create Your Udghosh Account</legend>
   </div>
-  		
-<div  class="form1" >
+  	
+<div class ="row">
+<div class = "col-md-1" ><p></p></div>
+ <div class="info col-md-5" style="border-radius:15px; border: 1px solid #ddd;background-color: rgba(245, 245, 245,0.8);float: left; position: relative; margin-top:100px;">
+ 
+<legend style="text-align: center; font-size: 12px; color: #333; ">Create Your Udghosh Account </legend> 
+</div>
+   	
+<div  class="form1" style="position: relative;" >
   
 
     <form class=" form-horizontal" action="signup.php" method="POST"  id="contact_form" name="form1"
-    style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; ">
+    style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; float: left;position: relative; ">
 <fieldset>
 
 <!-- Form Name -->
@@ -254,7 +261,8 @@
 </fieldset>
 </form>
 </div>
-
+</div>
+<!---->
 <div class="foot">
     <div class="footer-social-icons">
     <ul class="social-icons">
@@ -266,8 +274,9 @@
     </ul>
 
 </div>
-<div id="creative" style="color: #cccccc;  float: right; margin-right: 30px;margin-top:7px;"><i class="fa fa-copyright" aria-hidden="true"></i><span style="padding-left: 5px;font-size: 13px;">Creatives Udghosh 2017</span></div>
-    </div>
+<div id="creative" style="color: #cccccc;  float: right; margin-right: 30px;margin-top:7px;"><i class="fa fa-copyright" aria-hidden="true"></i><span style="padding-left: 5px;font-size: 13px;">Creatives Udghosh 2017</span>
+</div>
+</div>
 
 
    
@@ -343,4 +352,5 @@ enableSubmitEvent();
 
 </body> 
 </html>
+
 
