--- a/horizontal-timeline_after/index.html
+++ b/horizontal-timeline_after/index.html
@@ -6,6 +6,7 @@
 
 	<link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Fira+Sans:400,400italic' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="css/style.css"> <!-- Resource style -->
+	<link rel="stylesheet" href="css/style1.css">
 
 
 	<title>Horizontal Timeline | CodyHouse</title>
