--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
   <span class="cl-effect-1"><a href="#">EVENTS</a></span>
   <span class="cl-effect-1"><a href="#">GALLERY</a></span>
-  <span class="cl-effect-1"><a href="#">TEAM</a></span>
+  <span class="cl-effect-1"><a href="contact.html">TEAM</a></span>
   <span class="cl-effect-1"><a href="#">SPONSORS</a></span>
   <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
         <a style="float:none; display: inline" href="Register/signup.html"><button class="button button3">REGISTER</button></a>
@@ -68,7 +68,7 @@
                 <li class="cl-effect-1"><a href="#">HOME</a></li>
                 <li class="cl-effect-1"><a href="#">EVENTS</a></li>
                 <li class="cl-effect-1"><a href="#">GALLERY</a></li>
-                <li class="cl-effect-1"><a href="#">TEAM</a></li>
+                <li class="cl-effect-1"><a href="contact.html">TEAM</a></li>
                 <li class="cl-effect-1"><a href="#">SPONSORS</a></li>
 
 
