Head Web and Android

--- a/Register/user.html
+++ b/Register/user.html
@@ -4,8 +4,7 @@
 <head>
     <title>Sign-Up</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <meta charset="utf-8" >
+    <meta charset="UTF-8">
     <!-- stylesheet -->
     <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
@@ -37,7 +36,7 @@
         <a style="float:none; display: inline" href="signup.html">
             <button class="button button3">REGISTER</button>
         </a>
-        <li class="faq"><a data-toggle="modal" data-target="#myModal"  style="font-size: 13px; height: 40px; width: 49px; ">
+        <li class="faq"><a data-toggle="modal" data-target="#myModal" href="#" style="font-size: 13px; height: 40px; width: 49px; ">
           <span class="fa-stack fa-lg" style="font-size: 1em;">
           <i class="fa fa-circle fa-stack-2x"></i>
           <i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQs
@@ -372,7 +371,7 @@
             <div class='form-group fg29 hidden'><label class='col-md-2 control-label'>Player29</label><div class='col-md-4 inputGroupContainer'><div class='input-group'><span class='input-group-addon'><i class='glyphicon glyphicon-user'></i></span><input name='player29' placeholder='' class='form-control' type='text'></div></div> <label class='col-md-2 control-label'>Contact29</label><div class='col-md-4 inputGroupContainer'><div class='input-group'> <span class='input-group-addon'><i class='glyphicon glyphicon-earphone'></i></span> <input name='contact29' placeholder='' class='form-control' type='text' id='contact29'> <span class='contact hidden'>enter valid number</span></div></div></div>
 
             <div class='form-group fg30 hidden'><label class='col-md-2 control-label'>Player30</label><div class='col-md-4 inputGroupContainer'><div class='input-group'><span class='input-group-addon'><i class='glyphicon glyphicon-user'></i></span><input name='player30' placeholder='' class='form-control' type='text'></div></div> <label class='col-md-2 control-label'>Contact30</label><div class='col-md-4 inputGroupContainer'><div class='input-group'> <span class='input-group-addon'><i class='glyphicon glyphicon-earphone'></i></span> <input name='contact30' placeholder='' class='form-control' type='text' id='contact30'> <span class='contact hidden'>enter valid number</span></div></div></div>
-
+            <button type="submit" class="button5" name="submit" value="Sign-Up" style="margin: 10px; position: relative;">SUBMIT<span class="glyphicon glyphicon-send"></span></button>
 
         </div>
 <!--         <script type="text/javascript">
@@ -814,10 +813,7 @@
     .addnew {}
     </style>
 </body>
-
-
-
-          <!-- Modal -->
+              <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -827,7 +823,7 @@
       </div>
       <div class="modal-body">
         <h4><strong>Q.&nbsp;What is the procedure to be followed after reaching IITK?</strong></h4>
-        <p style="padding-left: 20px;">You need to report to the Hospitality Desk, Students Activity Centre (SAC) along with your college identity card.  <br> You will have to produce the reciept of your online payment and a recent passport size photograph. <br>Booklet will act as your identity card in campus. <br>In case of a big contingent, contingent leader needs to present the ID cards of all the people in his contingent at the hospitality desk along with a list of all the people. Accommodation would be strictly on shared basis. </p>
+        <p style="padding-left: 20px;">You need to report to the Hospitality Desk, Students Activity Centre (SAC) along with your college identity card. <br>You will have to produce the reciept of your online payment and a recent passport size photograph. <br>Booklet will act as your identity card in campus. <br>In case of a big contingent, contingent leader needs to present the ID cards of all the people in his contingent at the hospitality desk along with a list of all the people. Accommodation would be strictly on shared basis. </p>
 
 
                 <h4 class="q"><strong>Q.&nbsp;Can two participants be from different colleges in a team event? </strong></h4>
