--- a/Register/login.html
+++ b/Register/login.html
@@ -1,141 +1,143 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML> 
 <html>
-<head>
-  <title>Sign-In</title>
+<head> 
+  <title>Sign-In</title> 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta charset="utf-8" >
+
   <!-- stylesheet -->
-  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32"> 
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   <link rel="stylesheet" type="text/css" href="style.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href='https://fonts.googleapis.com/css?family=Playfair+Display:700,900|Fira+Sans:400,400italic' rel='stylesheet' type='text/css'>
+
   <!-- JavaScript -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="js/main.js"></script>
-
-    <style>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script> 
+  <script type="text/javascript" src="js/main.js"></script>
+  <style>
     *{
       margin: 0;
       padding: 0;
     }
-    </style>
-</head>
-<body id="body-color" style="background-image: url('formback.png'); background-position: center; background-size: 100%;  background-attachment: fixed;">
-<div class="topnav" id="myTopnav">
-  <div class="navbar-header"><a class="navbar-brand" href="../index.html"><img src="img/logo.png" >
-        </a></div>
+  </style>
+</head> 
+<body id="body-color" style="background-image: url('formback.png'); background-position: center; background-size: 100%;  background-attachment: fixed;"> 
+<div class="body">
+  <div class="topnav" id="myTopnav">
+    <div class="navbar-header"><a class="navbar-brand" href="../index.html"><img src="img/logo.png" >
+    </a></div>
 
-  <span class="cl-effect-1"><a href="#">EVENTS</a></span>
-  <span class="cl-effect-1"><a href="#">GALLERY</a></span>
-  <span class="cl-effect-1"><a href="../contact.html">TEAM</a></span>
-  <span class="cl-effect-1"><a href="#">SPONSORS</a></span>
-  <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
-        <a style="float:none; display: inline" href="signup.html"><button class="button button3">REGISTER</button></a>
+    <span class="cl-effect-1"><a href="#">EVENTS</a></span>
+    <span class="cl-effect-1"><a href="#">GALLERY</a></span>
+    <span class="cl-effect-1"><a href="#">TEAM</a></span>
+    <span class="cl-effect-1"><a href="#">SPONSORS</a></span>
+    <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
+    <a style="float:none; display: inline" href="signup.html"><button class="button button3">REGISTER</button></a>
 
-          <li class="faq"><a data-toggle="modal" data-target="#myModal"  style="font-size: 13px; height: 40px; width: 49px; ">
-          <span class="fa-stack fa-lg" style="font-size: 1em;">
-          <i class="fa fa-circle fa-stack-2x"></i>
-          <i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQs
-        </span></a></li>
-</div>
+    <li class="faq"><a data-toggle="modal" data-target="#myModal"  href="#" style="font-size: 13px; height: 40px; width: 49px; ">
+      <span class="fa-stack fa-lg" style="font-size: 1em;">
+        <i class="fa fa-circle fa-stack-2x"></i>
+        <i class="fa fa-question fa-stack-1x fa-inverse"></i><span style="text-align: center;padding-left: 30px; top:7px;">FAQs
+      </span></a></li>
+    </div>
 
-<!-- Mobile navbar -->
-<nav class=" hidden-md hidden-lg navbar navbar-default  " >
-        <!-- Brand and toggle get grouped for better mobile display -->
-        <div  class="navbar-header">
-            <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
-                <span class="sr-only">Toggle navigation</span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-                <span class="icon-bar"></span>
-            </button>
+    <!-- Mobile navbar -->
+    <nav class=" hidden-md hidden-lg navbar navbar-default  " >
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div  class="navbar-header">
+        <button type="button" data-target="#navbarCollapse" data-toggle="collapse" class="navbar-toggle">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
 
-            <a class="navbar-brand" href="../index.html" style="border-right:none;   margin-top: 8px; padding:5px;"><img src="img/logo.png"  >
+        <a class="navbar-brand" href="../index.html" style="border-right:none;   margin-top: 8px; padding:5px;"><img src="img/logo.png"  >
         </a>
-        </div>
-        <!-- Collection of nav links and other content for toggling -->
-        <div id="navbarCollapse" class="collapse navbar-collapse">
-            <ul class="nav navbar-nav">
-                <li class="cl-effect-1"><a href="../index.html">HOME</a></li>
-                <li class="cl-effect-1"><a href="#">EVENTS</a></li>
-                <li class="cl-effect-1"><a href="#">GALLERY</a></li>
-                <li class="cl-effect-1"><a href="../contact.html">TEAM</a></li>
-                <li class="cl-effect-1"><a href="#">SPONSORS</a></li>
+      </div>
+      <!-- Collection of nav links and other content for toggling -->
+      <div id="navbarCollapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav">
+          <li class="cl-effect-1"><a href="../index.html">HOME</a></li>
+          <li class="cl-effect-1"><a href="#">EVENTS</a></li>
+          <li class="cl-effect-1"><a href="#">GALLERY</a></li>
+          <li class="cl-effect-1"><a href="#">TEAM</a></li>
+          <li class="cl-effect-1"><a href="#">SPONSORS</a></li>
 
 
-            </ul>
+        </ul>
 
-        </div>
+      </div>
     </nav>
 
 
-<div style="position: relative;" class="title1">
-      <legend style="text-align: center; font-size: 30px; color: #333">Log In Your Udghosh Account</legend>
-  </div>
-
-<div  class="form2" >
-    <form class=" form-horizontal" action="login.php" method="POST"  id="contact_form" style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; ">
-<fieldset>
-
-
-
-<br>
-<div class="form-group">
-  <label class="col-md-2 control-label">Username</label>
-  <div class="col-md-10 inputGroupContainer">
-  <div class="input-group">
-  <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
-  <input  name="user" placeholder="Enter your username" class="form-control"  type="text" required>
-    </div>
-  </div>
-</div>
-
-<!-- Text input-->
-
-<div class="form-group">
-  <label class="col-md-2 control-label">Password</label>
-    <div class="col-md-10 inputGroupContainer">
-    <div class="input-group">
-        <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
-  <input name="pass" placeholder="Enter your password" class="form-control" type="password" required>
-    </div>
-  </div>
-</div>
-
-<div class="form-group">
-  <label class="col-md-2 control-label"></label>
-  <div class="col-md-4">
-    <button type="submit" class="button2" name="submit" value="Log-In">SIGN IN<span class="glyphicon glyphicon-send"></span></button>
-
-  </div>
-  <span style="color: #333; font-size: 11px; top:5px;position: relative;">Don't have an account?</span><a href="signup.html" class="signin" style="color: #9f1910; font-weight:bold;top:5px;font-size:15px;cursor: pointer;position: relative; text-align: center;" > SIGN UP </a>
-</div>
-</fieldset>
-</form>
-</div>
-
-<div class="foot">
-    <div class="footer-social-icons">
-    <ul class="social-icons">
-        <li><a href="https://www.facebook.com/udghosh.iitk/" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
-        <li><a href="https://twitter.com/udghoshiitk" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
-        <li><a href="https://www.youtube.com/user/udghosh11" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
-        <li><a href="https://www.linkedin.com/company-beta/7575911/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
-        <li><a href="https://plus.google.com/101958681892074759002?hl=en" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
-
-    </ul>
-
-</div>
-<div id="creative" style="color: #cccccc;  float: right; margin-right: 30px;margin-top:7px;"><i class="fa fa-copyright" aria-hidden="true"></i><span style="padding-left: 5px;font-size: 13px;">Creatives Udghosh 2017</span></div>
+    <div style="position: relative;" class="title1">
+      <legend style="text-align: center; font-size: 35px; font-family: Fira Sans, sans-serif; font-weight: 500;color: #333">Log In Your Udghosh Account</legend>
     </div>
 
+    <div  class="form2" >
+      <form class=" form-horizontal" action="login.php" method="POST"  id="contact_form" style="background-color: rgba(245, 245, 245,0.8); border-radius:15px; border: 1px solid #ddd; padding: 20px; ">
+        <fieldset>
 
 
-</body>
 
-          <!-- Modal -->
+          <br>
+          <div class="form-group">
+            <label class="col-md-2 control-label">Username</label>  
+            <div class="col-md-10 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+                <input  name="user" placeholder="Enter your username" class="form-control"  type="text" required>
+              </div>
+            </div>
+          </div>
+
+          <!-- Text input-->
+
+          <div class="form-group">
+            <label class="col-md-2 control-label">Password</label>  
+            <div class="col-md-10 inputGroupContainer">
+              <div class="input-group">
+                <span class="input-group-addon"><i class="glyphicon glyphicon-lock"></i></span>
+                <input name="pass" placeholder="Enter your password" class="form-control" type="password" required>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <label class="col-md-2 control-label"></label>
+            <div class="col-md-4">
+              <button type="submit" class="button2" name="submit" value="Log-In">SIGN IN<span class="glyphicon glyphicon-send"></span></button>
+
+            </div>
+            <div style="margin-left: 20px;">
+              <span style="color: #333; font-size: 11px; top:-5px;position: relative;">Don't have an account?</span><br><a href="signup.html" class="signin" style="color: #9f1910; font-weight:bold;top:5px;font-size:15px;cursor: pointer;position: relative; text-align: center; top:-10px" > SIGN UP </a></div>
+            </div>
+          </fieldset>
+        </form>
+      </div>
+
+      <div class="foot">
+        <div class="footer-social-icons">
+          <ul class="social-icons">
+            <li><a href="https://www.facebook.com/udghosh.iitk/" class="social-icon"> <i class="fa fa-facebook"></i></a></li>
+            <li><a href="https://twitter.com/udghoshiitk" class="social-icon"> <i class="fa fa-twitter"></i></a></li>
+            <li><a href="https://www.youtube.com/user/udghosh11" class="social-icon"> <i class="fa fa-youtube"></i></a></li>
+            <li><a href="https://www.linkedin.com/company-beta/7575911/" class="social-icon"> <i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://plus.google.com/101958681892074759002?hl=en" class="social-icon"> <i class="fa fa-google-plus"></i></a></li>
+
+          </ul>
+
+        </div>
+        <div id="creative" style="color: #cccccc;  float: right; margin-right: 30px;margin-top:7px;"><i class="fa fa-copyright" aria-hidden="true"></i><span style="padding-left: 5px;font-size: 13px;">Creatives Udghosh 2017</span></div>
+      </div>
+
+
+
+    </body>
+              <!-- Modal -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
   <div class="modal-dialog modal-lg" role="document">
     <div class="modal-content">
@@ -170,4 +172,5 @@
     </div>
   </div>
 </div>
-</html>
+
+    </html> 
