--- a/Events/index.html
+++ b/Events/index.html
@@ -47,7 +47,7 @@
 			<div class="navbar-header"><a class="navbar-brand" href="../"><img src="img/logo.png" >
 			</a></div>
 
-			<span class="cl-effect-1"><a href="../Events/">EVENTS</a></span>
+			<span class="cl-effect-1"><a href="..Udghosh-17/Events/">EVENTS</a></span>
 			<span class="cl-effect-1"><a href="../Gallery/">GALLERY</a></span>
 			<span class="cl-effect-1"><a href="../Team/">TEAM</a></span>
 			<span class="cl-effect-1"><a href="#">SPONSORS</a></span>
