--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@ canvas {
         <div id="navbarCollapse" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="cl-effect-1"><a href="#">HOME</a></li>
-                <li class="cl-effect-1"><a href="../Events/">EVENTS</a></li>
+                <li class="cl-effect-1"><a href="../Udghosh-17/Events/">EVENTS</a></li>
                 <li class="cl-effect-1"><a href="../Gallery/">GALLERY</a></li>
                 <li class="cl-effect-1"><a href="../Team/">TEAM</a></li>
                 <li class="cl-effect-1"><a href="#">SPONSORS</a></li>
