--- a/Team/index.html
+++ b/Team/index.html
@@ -42,9 +42,9 @@
             <div class="navbar-header"><a class="navbar-brand" href="../"><img src="img/logo.png" >
             </a></div>
 
-            <span class="cl-effect-1"><a href="../Udghosh-17/Events/">EVENTS</a></span>
-            <span class="cl-effect-1"><a href="../Udghosh-17/Gallery/">GALLERY</a></span>
-            <span class="cl-effect-1"><a href="../Udghosh-17/Team/">TEAM</a></span>
+            <span class="cl-effect-1"><a href="../Events/">EVENTS</a></span>
+            <span class="cl-effect-1"><a href="../Gallery/">GALLERY</a></span>
+            <span class="cl-effect-1"><a href="../Team/">TEAM</a></span>
             <span class="cl-effect-1"><a href="#">SPONSORS</a></span>
             <a href="javascript:void(0);" style="font-size:15px; color: #333;" class="icon" onclick="myFunction()">&#9776;</a>
             <a style="float:none; display: inline" href="../SignUp/"><button class="button button3">REGISTER</button></a>
@@ -76,10 +76,10 @@
                 <!-- Collection of nav links and other content for toggling -->
                 <div id="navbarCollapse" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
-                        <li class="cl-effect-1"><a href="../Udghosh-17/">HOME</a></li>
-                        <li class="cl-effect-1"><a href="../Udghosh-17/Events/">EVENTS</a></li>
-                        <li class="cl-effect-1"><a href="../Udghosh-17/Gallery/">GALLERY</a></li>
-                        <li class="cl-effect-1"><a href="../Udghosh-17/Team/">TEAM</a></li>
+                        <li class="cl-effect-1"><a href="../">HOME</a></li>
+                        <li class="cl-effect-1"><a href="../Events/">EVENTS</a></li>
+                        <li class="cl-effect-1"><a href="../Gallery/">GALLERY</a></li>
+                        <li class="cl-effect-1"><a href="../Team/">TEAM</a></li>
                         <li class="cl-effect-1"><a href="#">SPONSORS</a></li>
 
 
