--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ canvas {
 	<div class="body">
 	<!-- Navigation Bar -->
 	<div class="topnav" id="myTopnav">
-  <div class="navbar-header"><a class="navbar-brand" href="../"><img src="img/logo.png" >
+  <div class="navbar-header"><a class="navbar-brand" href="../Udghosh-17/"><img src="img/logo.png" >
         </a></div>
 
   <span class="cl-effect-1"><a href="../Udghosh-17/Events/">EVENTS</a></span>
